//
//  Accessibility.swift
//  TestCountryPickerFramework
//
//  Created by Suryakant Sharma-Pro on 27/04/19.
//  Copyright © 2019 SuryaKant Sharma. All rights reserved.
//

import Foundation

enum Accessibility {
    public static let selectCountryPicker = "Select country picker"
    public static let searchCountry = "Search country name here.."
    public static let cross = "Cross button"
}
